# kiso-testing-testapp

./: CMakeLists.txt  README.md
IntegrationTests/: CMakeLists.txt
IntegrationTests/DemoApplication/: CMakeLists.txt  README.md  testSuite1.cpp
IntegrationTests/DemoApplication/include/Dashboard/Dashboard/: Dashboard.hpp  Task.hpp  TaskInterface.hpp
IntegrationTests/DemoApplication/include/DemoappTypes/DemoappTypes/: DemoappTypes.hpp
IntegrationTests/DemoApplication/include/Tier1competetion/Tier1competetion/: Task.hpp  TaskInterface.hpp  Tier1competetion.hpp
IntegrationTests/DemoApplication/include/Tier2competetion/Tier2competetion/: Task.hpp  TaskInterface.hpp  Tier2competetion.hpp
IntegrationTests/DemoApplication/src/Dashboard/: Dashboard.cpp  Task.cpp
IntegrationTests/DemoApplication/src/Tier1competetion/: Task.cpp  Tier1competetion.cpp
IntegrationTests/DemoApplication/src/Tier2competetion/: Task.cpp  Tier2competetion.cpp
IntegrationTests/test_suite/: README.md  testSuite1.cpp
OSAdapter/include/Observer/Observer/: Observer.hpp
OSAdapter/include/OsAbstraction/OsAbstraction/: OsAbstraction.hpp  OsAbstractionTypes.hpp
OSAdapter/include/OsExtension/OsExtension/: MessageBuffer.hpp  MessageBufferInterface.hpp  (+5 more)
OSAdapter/src/Observer/: CMakeLists.txt
OSAdapter/src/OsAbstraction/: CMakeLists.txt
OSAdapter/src/OsAbstraction/OsAdapter/: CMakeLists.txt
OSAdapter/src/OsAbstraction/OsAdapter/FreeRtosAdapter/: CMakeLists.txt  FreeRtosAdapter.cpp
OSAdapter/src/OsAbstraction/OsAdapter/FreeRtosTestAdapter/: CMakeLists.txt  FreeRtosTestAdapter.cpp
OSAdapter/src/OsAbstraction/OsAdapter/NullOsAdapter/: CMakeLists.txt  NullOsAdapter.cpp
OSAdapter/src/OsAbstraction/OsAdapter/TestOsAdapter/: CMakeLists.txt
OSAdapter/src/OsExtension/: CMakeLists.txt  MessageBuffer.cpp  Semaphore.cpp
Platform/: CMakeLists.txt
Platform/RequiredInterface/: CMakeLists.txt
Platform/RequiredInterface/CommunicationChannelInterface/CommunicationChannelInterface/: TccInterface.hpp
Platform/RequiredInterface/TestAppRtosInterface/TestAppRtosInterface/: Task.hpp  TaskConfig.hpp  TaskEventQueue.hpp
Platform/stm32f401re/: CMakeLists.txt
Platform/stm32f401re/cmake/: platformLinkerConfiguration.cmake
Platform/stm32f401re/config/FreeRTOS/: FreeRTOSConfig.h
Platform/stm32f401re/config/Linker/: stm32f4.ld
Platform/stm32f401re/config/RTT/: SEGGER_RTT_Conf.h
Platform/stm32f401re/config/STM32CubeF4/: stm32f4xx_hal_conf.h
Platform/stm32f401re/config/STM32CubeF4/cmake/: CMakeLists.txt  cmsis.cmake  hal.cmake  usb-device.cmake
Platform/stm32f401re/config/etl/: etl_profile.h
Platform/stm32f401re/include/Rtos/TestAppRtos/: Rtos.hpp
Platform/stm32f401re/src/: CMakeLists.txt
Platform/stm32f401re/src/Middleware/: CMakeLists.txt  RttChannel.cpp
Platform/stm32f401re/src/Middleware/include/RttChannel/: RttChannel.hpp
Platform/stm32f401re/src/Rtos/: CMakeLists.txt  IdleTask.cpp  Rtos.cpp
Platform/stm32f401re/src/System/: CMakeLists.txt  Handler.cpp  Isr.cpp  Main.cpp  syscalls.c
TestApp/: CMakeLists.txt
TestApp/include/MessageHandler/MessageHandler/: MessageHandler.hpp
TestApp/include/TPC/TPC/: TPC.hpp  Task.hpp  TaskInterface.hpp
TestApp/include/TestAppTypes/TestAppTypes/: TestAppTypes.hpp
TestApp/include/TestCase/TestCase/: TestCaseBase.hpp  TestCaseInterface.hpp
TestApp/include/TestEnvironment/TestEnvironment/: Assert.hpp  AssertReport.hpp  Logging.hpp  LoggingInterface.hpp  Task.hpp  TaskInterface.hpp  TestEnvironment.hpp  TestEnvironmentTypes.hpp
TestApp/include/TestFactory/TestFactory/: TestFactoryBase.hpp  TestFactoryRegistrar.hpp
TestApp/include/TestRegistry/TestRegistry/: TestRegistry.hpp
TestApp/include/TestRunner/TestRunner/: Task.hpp  TaskInterface.hpp  TestRunner.hpp
TestApp/include/TestSuite/TestSuite/: TestSuiteBase.hpp  TestSuiteInterface.hpp
TestApp/mock/: CMakeLists.txt
TestApp/mock/CommunicationChannelMock/: CMakeLists.txt  CommunicationChannelMock.cpp
TestApp/mock/CommunicationChannelMock/CommunicationChannelMock/: CommunicationChannelMock.hpp
TestApp/mock/MessageBufferMock/: CMakeLists.txt  MessageBufferReferenceMock.cpp
TestApp/mock/MessageBufferMock/MessageBufferReferenceMock/: MessageBufferReferenceMock.hpp
TestApp/mock/SemaphoreMock/: CMakeLists.txt  SemaphoreMock.cpp
TestApp/mock/SemaphoreMock/SemaphoreMock/: SemaphoreMock.hpp
TestApp/src/MessageHandler/: MessageHandler.cpp
TestApp/src/TPC/: TPC.cpp  Task.cpp
TestApp/src/TestEnvironment/: Assert.cpp  AssertReport.cpp  Logging.cpp  Task.cpp  TestEnvironment.cpp
TestApp/src/TestRunner/: Task.cpp  TestRunner.cpp
TestApp/test/: CMakeLists.txt
TestApp/test/Unit/: CMakeLists.txt
TestApp/test/Unit/CommunicationChannel/: CMakeLists.txt  CommunicationChannelTest.cpp
TestApp/test/Unit/MessageHandler/: CMakeLists.txt  MessageHandlerTest.cpp
TestApp/test/Unit/MessageHandler/Clang-Tidy/: CMakeLists.txt  MessageHandlerClangTidy.cpp
TestApp/test/Unit/TPC/: CMakeLists.txt  TPCTest.cpp
TestApp/test/Unit/TPC/Clang-Tidy/: CMakeLists.txt  TPCClangTidy.cpp
TestApp/test/Unit/TestEnvironment/: AssertReportTest.cpp  AssertTest.cpp  CMakeLists.txt  LoggingTest.cpp  TestEnvironmentTest.cpp
TestApp/test/Unit/TestRegistry/: CMakeLists.txt  TestCases.cpp  TestRegistryClangTidy.cpp  TestRegistryTest.cpp  TestSuites.cpp
TestApp/test/Unit/TestRunner/: CMakeLists.txt  TestRunnerTest.cpp  testSuite1.cpp
TestApp/test/Unit/Tier1competetion/: CMakeLists.txt  Tier1competetionTest.cpp
TestApp/test/Unit/Tier1competetion/Clang-Tidy/: CMakeLists.txt  Tier1competetionClangTidy.cpp
cmake/: TestAppMemoryUsage.cmake  testAppAddDoxygen.cmake  testAppAddGcovr.cmake  testAppAddTest.cmake  testAppBuildFreeRtos.cmake  testAppGtestOutputParser.cmake  testAppPullDependencies.cmake  testAppReadFileAndPrintContent.cmake  testAppSetupClangTidy.cmake  testAppSetupProject.cmake  testAppWsl.cmake
cmake/toolchains/: GCC.cmake  ppc-ghs.cmake  stm32-arm-gcc-f401re.cmake  stm32-arm-gcc.cmake  unittest-ppc-ghs-emu.cmake  unittest-qemu-arm.cmake
cmake/tools/MemoryUsage/: Readme.md  memory_usage.py
(+2 files in other folders)
